@@ -25,6 +25,18 @@ object Common {
       case Some((2, v)) if v >= 11 => unusedWarnings
     }.toList.flatten,
 
+    fork in Test := true,
+
+    javaOptions in Test ++= {
+      if (scala.util.Properties.isJavaAtLeast("9")) {
+        Seq(
+          "--add-modules", "java.activation"
+        )
+      } else {
+        Nil
+      }
+    },
+
     scalacOptions in (Compile, doc) ++= {
       val hash = sys.process.Process("git rev-parse HEAD").lineStream_!.head
       val base = (baseDirectory in LocalRootProject).value.getAbsolutePath
